# Ankiros

./: .npmrc  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
decks/hsk1/: deck.json
decks/hsk1/cards/: batch_0001.json  batch_0002.json  batch_0003.json  batch_0004.json
decks/hsk1_new/: deck.json
decks/hsk1_new/cards/: batch_0001.json  batch_0002.json  batch_0003.json  batch_0004.json  batch_0005.json  batch_0006.json  batch_0007.json  batch_0008.json  batch_0009.json  batch_0010.json  batch_0011.json
decks/hsk2/: deck.json
docs/: android-port-design.md  android_build_guide.md  debug_error.txt
sample_decks/hsk3/: deck.json
sample_decks/hsk3/cards/: batch_001.json
src/: bindings.ts  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: db.rs  error.rs  lib.rs  log.rs  main.rs  models.rs  srs.rs  util.rs
src-tauri/src/commands/: cards.rs  decks.rs  import.rs  mod.rs  session.rs  state.rs  stats.rs
src/components/: DeckForm.tsx  Layout.tsx  PinyinDiff.tsx  SpeakButton.tsx  common.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx  modal.tsx  textarea.tsx
src/lib/: api.ts  logger.ts  pinyin.ts  useAsync.ts  useSpeech.ts
src/routes/: CardDetail.tsx  Cards.tsx  DeckDetail.tsx  Decks.tsx  Home.tsx  Result.tsx  Settings.tsx  Study.tsx
src/store/: appStore.ts  sessionStore.ts
